@@ -1,0 +1,33 @@
+{
+	"description": "schema for and ad conversion event",
+	"type": "object",
+	"properties": {
+		"conversion_id": {
+			"type": "string"
+		},
+		"cost_if_cpa": {
+			"type": "number"
+		},
+		"category": {
+			"type": "string"
+		},
+		"action": {
+			"type": "string"
+		},
+		"property": {
+			"type": "string"
+		},
+		"initial_value": {
+			"type": "number"
+		},
+		"advertiser_id": {
+			"type": "string"
+		},
+		"cost_model": {
+			"enum": ["cpa", "cpc", "cpm"]
+		},
+		"campaign_id": {
+			"type": "string"
+		}
+	}
+}
